@@ -1,6 +1,10 @@
 # ChangeLog file for monetdb-java
 # This file is updated with Maddlog
 
+* Thu Aug 22 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Improved JdbcClient program. It now also dumps definitions of MERGE TABLE,
+  REMOTE TABLE, REPLICA TABLE and STREAM TABLE when dumping all tables.
+
 * Wed Aug 14 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Improved MonetDatabaseMetaData methods:
   - getNumericFunctions(): it now includes functions: code, space and sys.alpha
